# blursed

./: README.md  blursed.py  setup.cfg  setup.py
test/: test.py
