[metadata]
name = blursed
version = 0.0.2
description = Just because you doesn't mean you should
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ckw017/blursed
author = Chris K. W.
author_email = chriskw.xyz@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
py_modules = blursed
install_requires = tokenize-rt
python_requires = !=2.*, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[bdist_wheel]
universal = True

